yok etme özelliği tamamlandı

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <h1>Geri Sayım Zamanlayıcı</h1>
         <input type="number" id="minuteInput" placeholder="Dakika gir" min="1">
-        <button onclick="startTimer()">Başlat</button>
-        <div id="timer">00:00</div>
+        <button id="btn">Başlat</button>
     </div>
+    <div id="timer">00:00</div>
     <script src="script.js"></script>
 </body>
 </html>
