--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
 </head>
 <body>
+    <p id="exit">Çıkmak İçin Süreye Tıklayın</p>
     <div class="container" id="container">
         <h1>Geri Sayım Zamanlayıcı</h1>
         <input type="number" id="minuteInput" placeholder="Dakika gir" min="1">
         <button id="btn">Başlat</button>
+    </div>
+    <div>
     </div>
     <div id="timer">00:00</div>
     <script src="script.js"></script>
