--- a/index.html
+++ b/index.html
@@ -8,19 +8,45 @@
 
 </head>
 <body>
-    <p id="exit">Çıkmak İçin Süreye Tıklayın</p>
-    <div class="container" id="container">
-        <h1>Geri Sayım Zamanlayıcı</h1>
-        <input style="display: none;" type="file" id="bgInput" accept="image/*">
-        <button class="background" id="customBtn">Görsel Yükle</button>
-        <div class="timer-input">
-            <input class="timer" type="number" id="minuteInput" placeholder="Dakika gir" min="1">
-            <button id="btn">Başlat</button>
+    <nav id="navbar" class="navbar">
+        <div class="x"> 
+            <svg id="carpi" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+            </svg>
+        </div>
+        <ul class="navbar-list">
+            <li class="ozluSoz-container">
+                <input type="checkbox" id="ozluSoz" checked> 
+                <label for="ozluSoz">Özlü Söz</label>
+            </li>
+            <li>
+                <button class="background" id="customBtn">Görsel Yükle</button>
+            </li>
+        </ul>
+    </nav>
+    <div class="big-container">
+        <div class="settings">
+            <svg id="settings" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8.932.727c-.243-.97-1.62-.97-1.864 0l-.071.286a.96.96 0 0 1-1.622.434l-.205-.211c-.695-.719-1.888-.03-1.613.931l.08.284a.96.96 0 0 1-1.186 1.187l-.284-.081c-.96-.275-1.65.918-.931 1.613l.211.205a.96.96 0 0 1-.434 1.622l-.286.071c-.97.243-.97 1.62 0 1.864l.286.071a.96.96 0 0 1 .434 1.622l-.211.205c-.719.695-.03 1.888.931 1.613l.284-.08a.96.96 0 0 1 1.187 1.187l-.081.283c-.275.96.918 1.65 1.613.931l.205-.211a.96.96 0 0 1 1.622.434l.071.286c.243.97 1.62.97 1.864 0l.071-.286a.96.96 0 0 1 1.622-.434l.205.211c.695.719 1.888.03 1.613-.931l-.08-.284a.96.96 0 0 1 1.187-1.187l.283.081c.96.275 1.65-.918.931-1.613l-.211-.205a.96.96 0 0 1 .434-1.622l.286-.071c.97-.243.97-1.62 0-1.864l-.286-.071a.96.96 0 0 1-.434-1.622l.211-.205c.719-.695.03-1.888-.931-1.613l-.284.08a.96.96 0 0 1-1.187-1.186l.081-.284c.275-.96-.918-1.65-1.613-.931l-.205.211a.96.96 0 0 1-1.622-.434zM8 12.997a4.998 4.998 0 1 1 0-9.995 4.998 4.998 0 0 1 0 9.996z"/>
+              </svg>
+            </div>
+        <p class="exit" id="exit">Çıkmak İçin Süreye Tıklayın</p>
+        <div class="container" id="container">
+            <h1>Geri Sayım Zamanlayıcı</h1>
+            <input style="display: none;" type="file" id="bgInput" accept="image/*">
+            <div class="timer-input">
+                <input class="timer" type="number" id="minuteInput" placeholder="Dakika gir" min="1">
+                <button id="btn" class="start">Başlat</button>
+            </div>
+        </div>
+        <div class="work" id="work">
+            <div class="work-content">
+                <div id="timer">00:00</div>
+                <p class="motivation" id="motivation">Zafer. "Zafer Benimdir" diyebilenindir. Başarı ise, "Başaracağım" diye başlayarak sonunda "Başardım" diyebilendir. <br> -Mustafa Kemal Atatürk</p>
+            </div>
         </div>
     </div>
-    <div>
-    </div>
-    <div id="timer">00:00</div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
