--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+    <audio id=music src="music/middle-earth-music.mp4" type="audio/mp4" loop></audio>
     <nav id="navbar" class="navbar">
         <div class="x"> 
             <svg id="carpi" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
@@ -18,6 +19,10 @@
             <li class="ozluSoz-container">
                 <input type="checkbox" id="ozluSoz" checked> 
                 <label for="ozluSoz">Özlü Söz</label>
+            </li>
+            <li class="music-container">
+                <input type="checkbox" id="music-check">
+                <label for="music-check">Müzik</label>
             </li>
             <li>
                 <button class="background" id="customBtn">Görsel Yükle</button>
