--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <audio id=music src="music/middle-earth-music.mp4" type="audio/mp4" loop></audio>
+    <audio id=music src="music/middle-age-music.mp4" type="audio/mp4" loop></audio>
     <nav id="navbar" class="navbar">
         <div class="x"> 
             <svg id="carpi" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
