--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="work" id="work">
             <div class="work-content">
                 <div id="timer">00:00</div>
+<!--                 <button class="duraklat-btn" id="duraklatBtn">Duraklat</button> -->
                 <p class="motivation" id="motivation">Zafer. "Zafer Benimdir" diyebilenindir. Başarı ise, "Başaracağım" diye başlayarak sonunda "Başardım" diyebilendir. <br> -Mustafa Kemal Atatürk</p>
             </div>
         </div>
