--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li class="music-container">
                 <input type="checkbox" id="music-check">
                 <label for="music-check">Müzik</label>
+                <input type="range" id="sesKontrol" min="0" max="1" step="0.01" value="1">
             </li>
             <li>
                 <button class="background" id="customBtn">Görsel Yükle</button>
