--- a/to-do-list.html
+++ b/to-do-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>To-Do List</title>
 </head>
 <body>
@@ -45,6 +45,6 @@
         <ul id="todoList" class="todoList"></ul>
     </div>
     <input style="display: none;" type="file" id="bgInput" accept="image/*">
-    <script src="script2.js"></script>
+    <script src="js/script2.js"></script>
 </body>
 </html>
