--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Timer</title>
-
+    <link rel="icon" href="img/clock.png" type="image/x-icon">
 </head>
 
 <body>
