--- a/to-do-list.html
+++ b/to-do-list.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>To-Do List</title>
+    <link rel="icon" href="img/clock.png" type="image/x-icon">
 </head>
 <body>
     <audio id=music src="music/middle-age-music.mp4" type="audio/mp4" loop></audio>
